--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
 //gmail
     implementation 'com.sun.mail:android-mail:1.6.0'
     implementation 'com.sun.mail:android-activation:1.6.0'
+
+    //chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+
 }
