--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
     dependencies {
@@ -27,6 +27,9 @@ allprojects {
         google()
         jcenter()
 
+            maven { url "https://jitpack.io" }
+
+
     }
 }
 
@@ -35,11 +38,6 @@ task clean(type: Delete) {
 }
 
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
 
-    }
-}
+
 
