--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -89,5 +91,13 @@ dependencies {
 
     //chart
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    // google_sheet
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
+    implementation 'com.google.api-client:google-api-client-android:1.23.0'
+
+    //
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 
 }
