--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ratinadeticpro">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -13,8 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ui.ui.LunchFragmentActivity"></activity>
-        <activity android:name=".Ui.ui.signUp.MainActivity"></activity>
+        <activity android:name=".Ui.ui.LunchFragmentActivity" />
+        <activity android:name=".Ui.ui.signUp.MainActivity" />
         <activity
             android:name=".Ui.ui.Login.LoginActivity"
             android:label="@string/app_name">
