--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    dataBinding {
+        enabled = true
+    }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
@@ -105,7 +107,6 @@ dependencies {
 
     //
     implementation 'com.android.support:multidex:1.0.3'
-
 
 
 }
