--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true // This line here
-            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -101,6 +101,8 @@ dependencies {
 
     //chart
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+
     // google_sheet
     implementation 'com.google.apis:google-api-services-sheets:v4-rev516-1.23.0'
     implementation 'com.google.api-client:google-api-client-android:1.23.0'
