--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-kapt"
+apply plugin: 'com.google.gms.google-services'
 
 apply plugin: 'kotlin-android-extensions'
 
@@ -110,5 +111,15 @@ dependencies {
     //
     implementation 'com.android.support:multidex:1.0.3'
 
+// Add the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation "com.google.firebase:firebase-database:19.2.1"
+
+    // Add the dependencies for any other Firebase products you want to use in your app
+    // For example, to also use Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+
+
+    kapt 'com.android.databinding:compiler:3.0.1'
 
 }
