--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath "com.android.tools.build:gradle:$android_plugin_version"
 
-
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 
 }
