--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 android.databinding.incremental=true
 android.lifecycleProcessor.incremental=true
+kotlin.incremental=true
+kapt.incremental.apt=true
