--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ui.ui.LunchResearcherFragment" >
+        <activity android:name=".ui.ui.LunchResearcherFragment">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -23,20 +23,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Ui.ui.LunchFragmentActivity" />
-        <activity android:name=".Ui.ui.signUp.MainActivity" />
+        <activity android:name=".ui.ui.LunchFragmentActivity" />
+        <activity android:name=".ui.ui.signUp.MainActivity" />
         <activity
-            android:name=".Ui.ui.Login.LoginActivity"
+            android:name=".ui.ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <action android:name="android.intent.action.MAIN" />
-
                 <action android:name="android.intent.action.VIEW" />
-
             </intent-filter>
         </activity>
     </application>
